Fix nav tab wrapper outside of wrap

--- a/assets/css/calypsoify.css
+++ b/assets/css/calypsoify.css
@@ -595,6 +595,10 @@ html.wp-toolbar {
 #edittag {
     max-width: 100%;
 }
+#wpbody-content > .nav-tab-wrapper {
+	max-width: 1040px;
+    margin: 0 auto !important;
+}
 
 /* Action header */
 .action-header {
